<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.svetanis</groupId>
    <artifactId>adk-agents</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <adk.version>1.0.0</adk.version>
        <!-- Specify the version of Java you'll be using -->
		<project.java.version>23.0.2</project.java.version>
		<junit.jupiter.version>5.10.0</junit.jupiter.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Increase payload size for messages containing heavy content -->
        <org.apache.tomcat.websocket.DEFAULT_BUFFER_SIZE>10485760</org.apache.tomcat.websocket.DEFAULT_BUFFER_SIZE>
        <!-- Increase request timeout for long-running agent interactions -->
        <spring.mvc.async.request-timeout>600000</spring.mvc.async.request-timeout>
        <jackson.version>2.17.0</jackson.version>
    </properties>
    <dependencies>
        <!-- The ADK core dependency -->
        <dependency>
            <groupId>com.google.adk</groupId>
            <artifactId>google-adk</artifactId>
            <version>${adk.version}</version>
        </dependency>
        <!-- The ADK dev web UI to debug your agent -->
        <dependency>
            <groupId>com.google.adk</groupId>
            <artifactId>google-adk-dev</artifactId>
            <version>${adk.version}</version>
            <scope>compile</scope>
        </dependency>
	    <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>        
		<dependency>
    		<groupId>com.fasterxml.jackson.core</groupId>
    		<artifactId>jackson-databind</artifactId>
    		<version>${jackson.version}</version> 
		</dependency>
		<dependency>
    		<groupId>com.fasterxml.jackson.dataformat</groupId>
    		<artifactId>jackson-dataformat-yaml</artifactId>
    		<version>${jackson.version}</version> 
		</dependency>
		<dependency>
    		<groupId>com.github</groupId>
    		<artifactId>copilot-sdk-java</artifactId>
    		<version>0.2.1-java.1</version>
		</dependency>   
		<dependency>
    		<groupId>com.yahoofinance-api</groupId>
    		<artifactId>YahooFinanceAPI</artifactId>
    		<version>3.17.0</version>
			<exclusions>
        	  <exclusion>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
              </exclusion>
            </exclusions>    		
		</dependency>				
    </dependencies>
</project>